# SPIDX

./: .gitignore  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.kiva/pipelines/: spidx.yaml
ci/: local_pipeline.ps1
crates/spidx-canon/: Cargo.toml
crates/spidx-canon/src/: lib.rs
crates/spidx-cli/: Cargo.toml
crates/spidx-cli/src/: main.rs
crates/spidx-core/: Cargo.toml
crates/spidx-core/src/: lib.rs
crates/spidx-fuzz/: Cargo.toml
crates/spidx-fuzz/src/: main.rs
crates/spidx-guard/: Cargo.toml
crates/spidx-guard/src/: lib.rs
crates/spidx-proof/: Cargo.toml
crates/spidx-proof/src/: lib.rs
crates/spidx-rewrite/: Cargo.toml
crates/spidx-rewrite/src/: lib.rs
crates/spidx-wal/: Cargo.toml
crates/spidx-wal/src/: lib.rs
restored-cargo/: .global-cache
restored-cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: anyhow-1.0.104.crate  arrayvec-0.7.8.crate  blake3-1.8.5.crate  cc-1.3.0.crate  clap-4.6.4.crate  clap_builder-4.6.2.crate  clap_derive-4.6.4.crate  getrandom-0.4.3.crate  jobserver-0.1.35.crate  libfuzzer-sys-0.4.13.crate  memchr-2.8.3.crate  proc-macro2-1.0.107.crate  quote-1.0.47.crate  serde-1.0.229.crate  serde_core-1.0.229.crate  serde_derive-1.0.229.crate  serde_json-1.0.151.crate  shlex-2.0.1.crate  syn-3.0.3.crate  zmij-1.0.23.crate
restored-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/anyhow-1.0.104/: .cargo_vcs_info.json  Cargo.toml
restored-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/clap-4.6.4/: .cargo_vcs_info.json  Cargo.toml
restored-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/clap_derive-4.6.4/: .cargo_vcs_info.json  Cargo.toml
restored-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jobserver-0.1.35/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
(+37 files in other folders)
