[package]
name = "spidx-fuzz"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spidx_fuzz"
path = "src/main.rs"

[dependencies]
spidx-core = { path = "../spidx-core" }
spidx-canon = { path = "../spidx-canon" }
spidx-rewrite = { path = "../spidx-rewrite" }
spidx-guard = { path = "../spidx-guard" }
spidx-proof = { path = "../spidx-proof" }
spidx-wal = { path = "../spidx-wal" }
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"